--- a/clinique/src/main/resources/templates/admin/components/sideBar.html
+++ b/clinique/src/main/resources/templates/admin/components/sideBar.html
@@ -26,6 +26,11 @@
             </a>
           </li>
           <li>
+            <a href="/typeDepense/liste">
+              <i class="bi bi-circle"></i><span>Type de depense</span>
+            </a>
+          </li>
+          <li>
             <a href="/acte/liste">
               <i class="bi bi-circle"></i><span>Acte</span>
             </a>
