--- a/clinique/src/main/resources/templates/admin/crud/depense/liste.html
+++ b/clinique/src/main/resources/templates/admin/crud/depense/liste.html
@@ -41,7 +41,7 @@
         
             <section id="section" class="section">
               <div class="row">
-                <div class="col-xxl-8">
+                <div class="col-xxl-12">
         
                   <div class="card">
                     <div class="card-body">
@@ -52,7 +52,7 @@
                         <thead>
                           <tr>
                             <th scope="col">ID</th>
-                            <th scope="col">Libelle</th>
+                            <th scope="col">Type</th>
                             <th scope="col">Prix</th>
                             <th scope="col">Date depense</th>
                             <th scope="col"></th>
@@ -78,41 +78,6 @@
         
                 </div>
         
-                <div class="col-xxl-4">
-                  <div class="card">
-                    <div class="card-body">
-                      <h5 class="card-title">Ajouter</h5>
-                      <form action="add" method="post" class="row g-3 needs-validation" novalidate>
-        
-                        <div class="col-md-12">
-                          <div class="form-floating">
-                            <input required type="text" name="libelle" class="form-control" id="floatingName" >
-                            <label for="floatingName">Libelle</label>
-                          </div>
-                        </div>
-
-                        <div class="col-md-12">
-                            <div class="form-floating">
-                              <input required type="number" name="prix" class="form-control" id="floatingName" >
-                              <label for="floatingName">Prix</label>
-                            </div>
-                          </div>
-
-                          <div class="col-md-12">
-                            <div class="form-floating">
-                              <input required type="date" name="dateDepense" class="form-control" id="floatingName" >
-                              <label for="floatingName">Date de depense</label>
-                            </div>
-                          </div>
-        
-                        <div class="col-md-12">
-                          <button type="submit" class="btn btn-primary">Ajouter</button>
-                        </div>
-        
-                      </form>
-                    </div>
-                  </div>
-                </div>
         
               </div>
         
