--- a/clinique/src/main/resources/templates/admin/crud/patient/liste.html
+++ b/clinique/src/main/resources/templates/admin/crud/patient/liste.html
@@ -90,7 +90,7 @@
         
                         <div class="col-md-12">
                           <div class="form-floating">
-                            <input required type="text" name="nom" class="form-control" id="floatingName" >
+                            <input required type="text" placeholder="nom" name="nom" class="form-control" id="floatingName" >
                             <label for="floatingName">Nom</label>
                           </div>
                         </div>
