--- a/clinique/src/main/resources/templates/user/components/sidebar.html
+++ b/clinique/src/main/resources/templates/user/components/sidebar.html
@@ -6,14 +6,14 @@
         <li class="nav-item">
             <a class="nav-link " href="/utilisateur">
                 <i class="bi bi-grid"></i>
-                <span>Add acte</span>
+                <span>Acte</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
         <li class="nav-item">
             <a class="nav-link " href="/depense/addUser">
                 <i class="bi bi-grid"></i>
-                <span>Saisie depense</span>
+                <span>Depense</span>
             </a>
         </li><!-- End Dashboard Nav -->
 
