--- a/clinique/src/main/resources/templates/index.html
+++ b/clinique/src/main/resources/templates/index.html
@@ -1,14 +1,83 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">  
-    <meta charset="UTF-8"/>
-    <title>Page</title>
+    <head>    
+        <meta charset="UTF-8"/>
+        <title>Page</title>
     
-    <link href="https://fonts.gstatic.com" rel="preconnect">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Nunito:300,300i,400,400i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-
-</head>
+    
+         <!-- icon -->
+         <link rel="shortcut icon" th:href="@{/assets/img/hyper.svg}" type="image/x-icon">
+        
+         <!-- Vendor CSS Files -->
+         <link th:href="@{/assets/vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+         <link th:href="@{/assets/vendor/bootstrap-icons/bootstrap-icons.css}" rel="stylesheet">
+         <link th:href="@{/assets/vendor/boxicons/css/boxicons.min.css}" rel="stylesheet">
+         <link th:href="@{/assets/vendor/quill/quill.snow.css}" rel="stylesheet">
+         <link th:href="@{/assets/vendor/quill/quill.bubble.css}" rel="stylesheet">
+         <link th:href="@{/assets/vendor/remixicon/remixicon.css}" rel="stylesheet">
+         <link th:href="@{/assets/vendor/simple-datatables/style.css}" rel="stylesheet">
+         <link rel="stylesheet" th:href="@{/assets/css/login.css}">
+    </head>
 <body>
-    <a href="/loginAdmin"><button>Login Admin</button></a>
-    <a href="/utilisateur"><button>utilisateur</button></a>
+    <main>
+        <div class="container">
+    
+          <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
+            <div class="container">
+                <div class="row justify-content-center">
+                    <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
+    
+                        <div class="d-flex justify-content-center py-4">
+                            <a  class="logo d-flex align-items-center w-auto">
+                            <span class="d-none d-lg-block">DocT</span>
+                            <img th:src="@{/assets/img/hyper.svg}" alt="">
+                            <span class="d-none d-lg-block">R</span>
+                            </a>
+                        </div><!-- End Logo -->
+    
+                  <div class="card mb-3">
+    
+                    <div class="card-body">
+    
+                      <div class="pt-4 pb-2">
+                        <h5 class="card-title text-center pb-0 fs-4">Welcome</h5>
+                        <p class="text-center small">Connectez vous en tant qu'admin ou employe</p>
+                      </div>
+    
+                    <div class="row">
+                        <div class="col-md-12">
+                            <a href="/loginAdmin"><button class="btn btn-primary">Login Admin</button></a>
+                        </div>
+                        <br><br>
+                        <div class="col-md-12">
+                            <a href="/loginEmploye"><button class="btn btn-primary">Login Employe</button></a>
+                        </div>
+                    </div>
+    
+                    </div>
+                  </div>
+    
+    
+                </div>
+              </div>
+            </div>
+    
+          </section>
+    
+        </div>
+    </main><!-- End #main -->
+
+    <!-- Vendor JS Files -->
+    <script th:src="@{/assets/vendor/apexcharts/apexcharts.min.js}"></script>
+    <script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <script th:src="@{/assets/vendor/chart.js/chart.umd.js}"></script>
+    <script th:src="@{/assets/vendor/echarts/echarts .min.js}"></script>
+    <script th:src="@{/assets/vendor/quill/quill.min.js}"></script>
+    <script th:src="@{/assets/vendor/simple-datatables/simple-datatables.js}"></script>
+    <script th:src="@{/assets/vendor/tinymce/tinymce.min.js}"></script>
+    <script th:src="@{/assets/vendor/php-email-form/validate.js}"></script>
+    
+    <!-- Template Main JS File -->
+    <script th:src="@{/assets/js/main.js}"></script>
 </body>
 </html>
