--- a/clinique/src/main/resources/templates/user/acte/facture.html
+++ b/clinique/src/main/resources/templates/user/acte/facture.html
@@ -16,58 +16,91 @@
         <link th:href="@{/assets/vendor/simple-datatables/style.css}" rel="stylesheet">
 
         <link rel="stylesheet" th:href="@{/assets/css/login.css}">
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/html2pdf.js/0.9.2/html2pdf.bundle.js"></script>
+        <script>
+            function exportToPDF() {
+              const element = document.getElementById("fact");
+        
+              // Options de configuration pour html2pdf
+              const options = {
+                filename: 'facture.pdf',
+                image: { type: 'jpeg/png/svg', quality: 0.98 },
+                html2canvas: { scale: 2 },
+                jsPDF: { unit: 'mm', format: 'a4', orientation: 'portrait' }
+              };
+        
+              // Utilisez html2pdf pour exporter l'élément en PDF
+              html2pdf().set(options).from(element).save();
+            }
+          </script>
+  
     </head>
 
     <body>
 
-        <main>
+      <main>
+        <div  class="container">
+    
+          <section  class="section register d-flex flex-column align-items-center justify-content-center py-4">
             <div class="container">
-        
-              <section class="section register min-vh-100 d-flex flex-column align-items-center justify-content-center py-4">
-                <div class="container">
-                    <div class="row justify-content-center">
-                        <div class="col-lg-4 col-md-6 d-flex flex-column align-items-center justify-content-center">
-        
-                            <div class="d-flex justify-content-center py-4">
-                                <a  class="logo d-flex align-items-center w-auto">
-                                <span class="d-none d-lg-block">Back</span>
-                                <img th:src="@{/assets/img/hyper.svg}" alt="">
-                                <span class="d-none d-lg-block">Office</span>
-                                </a>
-                            </div><!-- End Logo -->
-        
-                      <div class="card mb-3">
-        
-                        <div class="card-body">
-        
-                          <div class="pt-4 pb-2">
-                            <h5 class="card-title text-center pb-0 fs-4">Facture</h5>
-                            <p class="text-center small">Acte</p>
-                          </div>
-        
-                          <div class="p-2">
-                            <p>Nom du patient :<span th:text="${patient.nom}"></span></p>
-                            <p>Type d'acte :<span th:text="${type.type}"></span></p>
-                            <p>Prix :<span th:text="${prix}"></span></p>
-                            <p>Date de l'acte :<span th:text="${dateActe}"></span></p>
-                            <a th:href="@{/pdf/{nom}/{type}/{prix}/{date}(nom=${patient.nom},type=${type.type},prix=${prix},date=${dateActe})}" download="facture.pdf"><button class="btn btn-primary w-100">PDF</button></a>
-                          </div>
-                            <p class="small mb-0"><a href="/utilisateur">← Retour</a></p>
-                        </div>
+              <div class="row justify-content-center">
+                <div  class=" d-flex flex-column align-items-center justify-content-center">
+                  
+                  <div class="d-flex justify-content-center py-4">
+                    <button onclick="exportToPDF()" class="btn btn-primary">Generer un pdf</button>
+                    <a href="/utilisateur">
+                      <button  class="btn btn-secondary">Retour</button>
+                    </a>
+                  </div><!-- End Logo -->
+                  
+    
+                  <div id="fact" style="width: 800px;" class="card mb-3">
+    
+                    <div  class="card-body">
+                      
+                      
+    
+                      <div class="pt-4 pb-2">
+                        <h5 class="card-title text-center pb-0 fs-4">Fature </h5>
                       </div>
-        
-        
-                    </div>
-                  </div>
-                </div>
-        
-              </section>
-        
-            </div>
-        </main><!-- End #main -->
+    
+                      <div  class="p-2">
+                        <p>Nom du patient :<span th:text="${patient.nom}"></span></p>
+                        <p>Date de la facture : <span th:text="${dateN}"></span></p>
+                      </div>
 
-        <br>
-        <p><a th:href="@{/pdf/{nom}/{type}/{prix}/{date}(nom=${patient.nom},type=${type.type},prix=${prix},date=${dateActe})}" download="facture.pdf"><button>Generer le pdf</button></a></p>
+                      <div class="mt-4">
+                                    
+                                    <!-- Table with stripped rows -->
+                                    <table   class="table table-responsive  ">
+                                      <thead>
+                                        <tr>
+                                          <th scope="col">Type d'acte</th>
+                                          <th scope="col">Date</th>
+                                          <th scope="col">Montant</th>
+                                        </tr>
+                                      </thead>
+                                      <tbody>
+                                        <tr th:each="acte : ${actes}">
+                                          <td th:text="${acte.type}"></td>
+                                          <td th:text="${acte.dateActe}"></td>
+                                          <td th:text="${acte.prix}"></td>
+                                        </tr>
+                                        <tr>
+                                          <td></td>
+                                          <td style="background-color: #d7d7d7;">TOTAL</td>
+                                          <td style="background-color: #d7d7d7;" th:text="${montantT}"></td>
+                                        </tr>
+                                      </tbody>
+                                    </table>
+                      
+                      
+                          </section>
+    
+    
+        </div>
+      </main><!-- End #main -->
+
         <script th:src="@{/assets/vendor/apexcharts/apexcharts.min.js}"></script>
         <script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
         <script th:src="@{/assets/vendor/chart.js/chart.umd.js}"></script>
