--- a/clinique/src/main/resources/templates/user/depense/add.html
+++ b/clinique/src/main/resources/templates/user/depense/add.html
@@ -42,31 +42,45 @@
                     <div class="card">
                       <div class="card-body">
                         <h1 class="card-title">Ajouter une depense</h1>
-                        <form action="/depense/addUser" method="post" class="row g-3 needs-validation" novalidate>
+                        <form action="addDepense" method="post" class="row g-3 needs-validation" novalidate>
                         
-                            <div class="col-md-12">
-                                <div class="form-floating">
-                                  <input type="text" name="libelle" class="form-control">
-                                  <label for="floatingName">Libelle</label>
+                          <div class="col-md-12 form-floating">
+                            <select required class="form-control" name="type">
+                                <option th:each="type : ${types}" th:value="${type.id}" th:text="${type.libelle}"></option>
+                            </select>
+                            <label for="floatingName">Type de depense</label>
+                          </div>
+
+                            <div class="col-md-12 row g-3">
+                                <div class="col-md-4 form-floating">
+                                    <input required class="form-control" pattern="^(0?[1-9]|[1-2][0-9]|3[0-1])$" type="number" name="jour" placeholder="Jour">
+                                    <label for="floatingName">Jour</label>
+                                </div>
+                                <div class="col-md-4 row">
+                                    <div class="col-md-6" th:each="moi : ${mois}">
+                                        <p><input name="mois" type="checkbox" th:value="${moi.id}" ><span th:text="${moi.mois}"></span></p>
+                                    </div>
+                                </div>
+                                <div class="col-md-4 form-floating">
+                                    <input required class="form-control"  type="number" name="annee" placeholder="Jour">
+                                    <label for="floatingName">Année</label>
                                 </div>
                             </div>
     
                             <div class="col-md-12">
                                 <div class="form-floating">
-                                    <input type="number" name="prix" class="form-control">
+                                    <input required type="number" name="prix" placeholder="Prix" class="form-control">
                                   <label for="floatingName">Prix</label>
                                 </div>
                             </div>
-    
-                            <div class="col-md-12">
-                                <div class="form-floating">
-                                  <input required type="date" name="dateDepense" class="form-control" id="floatingName" >
-                                  <label for="floatingName">Date</label>
-                                </div>
-                              </div>
             
-                            <div class="col-md-12">
-                              <button type="submit" class="btn btn-primary">Ajouter</button>
+                            <div class="col-md-12 row mt-4">
+                                <div class="col-md-6">
+                                    <button type="submit" class="w-100 btn btn-primary">Ajouter</button>
+                                </div>
+                                <div class="col-md-6">
+                                    <button class="w-100 btn btn-info" type="button" data-bs-toggle="modal" data-bs-target="#csvImport">Import CSV</button>
+                                </div>
                             </div>
             
                           </form>
@@ -81,18 +95,43 @@
           
               </section>
 
-        </main>
 
-        <script th:src="@{/assets/vendor/apexcharts/apexcharts.min.js}"></script>
-        <script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-        <script th:src="@{/assets/vendor/chart.js/chart.umd.js}"></script>
-        <script th:src="@{/assets/vendor/echarts/echarts.min.js}"></script>
-        <script th:src="@{/assets/vendor/quill/quill.min.js}"></script>
-        <script th:src="@{/assets/vendor/simple-datatables/simple-datatables.js}"></script>
-        <script th:src="@{/assets/vendor/tinymce/tinymce.min.js}"></script>
-        <script th:src="@{/assets/vendor/php-email-form/validate.js}"></script>
-        
-        <!-- Template Main JS File -->
-        <script th:src="@{/assets/js/main.js}"></script>
+
+              <div class="modal fade" id="csvImport"  tabindex="-1">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title">Importer par csv</h5>
+                      <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                    </div>
+                    <div class="modal-body">
+                      <form action="/depense/importCSV" method="post" enctype="multipart/form-data">
+                        <div class="form-floating">
+                          <input accept=".csv" type="file" class="form-control" name="file" id="fileInp">
+                          <label for="fileInp">Fichier csv</label>
+                        </div>
+                        <div class="mt-4">
+                          <button class="btn btn-success w-100" type="submit">Importer</button>
+                        </div>
+                      </form>
+                    </div>
+                  </div>
+                </div>
+              </div><!-- End Basic Modal-->
+
+
+              <!-- Vendor JS Files -->
+              <script th:src="@{/assets/vendor/apexcharts/apexcharts.min.js}"></script>
+              <script th:src="@{/assets/vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
+              <script th:src="@{/assets/vendor/chart.js/chart.umd.js}"></script>
+              <script th:src="@{/assets/vendor/echarts/echarts .min.js}"></script>
+              <script th:src="@{/assets/vendor/quill/quill.min.js}"></script>
+              <script th:src="@{/assets/vendor/simple-datatables/simple-datatables.js}"></script>
+              <script th:src="@{/assets/vendor/tinymce/tinymce.min.js}"></script>
+              <script th:src="@{/assets/vendor/php-email-form/validate.js}"></script>
+              
+              <!-- Template Main JS File -->
+              <script th:src="@{/assets/js/main.js}"></script>
+        </main>
     </body>
 </html>
